@@ -1,3 +1,7 @@
+2008-10-26  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Rectangle.cs: add center setter
+
 2008-10-25  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Feature.cs: add XmlIncludes for serialization
